# polymarket_research

./: .env.example  .gitignore  CLAUDE.md  DELTA_TRACKER_DELIVERABLE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LIVE_DEPLOYMENT_PLAN.md  MAKER_REBATES_ANALYSIS.md  MULTI_AGENT_ARCHITECTURE.md  ORCHESTRATOR_ARCHITECTURE.md  ORCHESTRATOR_STATUS.md  README.md  docker-compose.yml  pyproject.toml
archive/polymarket/: README.md  launch_agents.sh  launch_agents_round2.sh  launch_backtest_fix_agents.sh  launch_optimization_agents.sh  launch_wallet_discovery_agents.sh
archive/polymarket/config/: account88888_strategy.json  live_trading.json  pm2.config.js  production.env.example
archive/polymarket/dashboard/: README.md  dashboard.py  requirements.txt
archive/polymarket/data/: extraction_feasibility_analysis.json  (+2 more)
docs/: DELTA_TRACKER.md
examples/: delta_tracker_example.py
scripts/: health_check.py  orderbook_collector.py  parse_final_minute.py  run_maker_bot.py
src/: config.py
src/api/: __init__.py  clob_ws.py  gamma.py
src/exchanges/: __init__.py  base.py  hyperliquid.py  paper.py
src/maker/: __init__.py  bot.py  cloudflare_bypass.py  delta_tracker.py  dual_order.py  live_maker_bot.py  market_finder.py  paper_simulator.py  rebate_monitor.py  risk_limits.py
src/trading/: __init__.py  balance_checker.py  executor.py
systemd/: maker-bot.service
tests/: test_delta_tracker.py  test_dual_order.py  test_exchanges.py  test_maker_backtest.py  test_maker_bot.py  test_paper_simulator.py  test_paper_trading.py  test_rebate_monitor.py  test_risk_limits.py
(+275 files in other folders)
